--- a/package.xml
+++ b/package.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ros_package_template</name>
+  <name>simple_chassis_controller</name>
   <version>0.1.0</version>
-  <description>A template for ROS packages.</description>
-  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
+  <description>Simple robot Chassis controller</description>
+  <maintainer email="liaoqiayuan@gmail.com">Qiayuan Liao</maintainer>
   <license>BSD</license>
-  <!--  <url type="website">https://github.com/ethz-asl/ros_best_practices</url>-->
-  <!--  <url type="bugtracker">https://github.com/ethz-asl/ros_best_practices/issues</url>-->
-  <author email="pfankhauser@anybotics.com">Peter Fankhauser</author>
+  <author email="liaoqiayuan@gmail.com">Qiayuan Liao</author>
 
   <!-- buildtool_depend: dependencies of the build process -->
   <buildtool_depend>catkin</buildtool_depend>
   <!-- build_depend: dependencies only used in source files -->
-  <build_depend>boost</build_depend>
-  <!-- depend: build, export, and execution dependency -->
-  <depend>eigen</depend>
-  <depend>roscpp</depend>
-  <depend>sensor_msgs</depend>
 
-  <build_depend>roslint</build_depend>
+  <!-- depend: build, export, and execution dependency -->
+  <depend>roscpp</depend>
+  <depend>roslint</depend>
+  <depend>control_toolbox</depend>
+  <depend>controller_interface</depend>
+  <depend>forward_command_controller</depend>
+  <depend>hardware_interface</depend>
+  <depend>pluginlib</depend>
+
+  <export>
+    <controller_interface plugin="${prefix}/simple_chassis_controller_plugins.xml"/>
+  </export>
 </package>
